syntax = "proto3";

package prototype;

message uint128{
    uint64 hi = 1;
    uint64 lo = 2;
}

message account_name{
    uint128 value = 1;
}

message safe64{
    int64 value = 1;
}

message coin{
    safe64 amount = 1;
}

message vest{
    safe64 amount = 1;
}

message public_key_data{
    bytes elems_ = 1;
}

message public_key_type{
    message binary_key {
        uint32 check = 1;
        public_key_data data = 2;
    }
    public_key_data key_data = 1;
}

message kv_account_auth{
    account_name key = 1;
    uint32 value = 2;
}

message kv_key_auth{
    public_key_type key = 1;
    uint32 value = 2;
}

message authority{
    enum classification{
         owner   = 0;
         active  = 1;
         key     = 2;
         posting = 3;
    }
    classification cf = 1;
    uint32 weight_threshold = 2;
    repeated kv_account_auth account_auths = 3;
    repeated kv_key_auth key_auths = 4;
    //map<namex, uint32> account_auths = 2;
    // map<public_key_type, uint32> key_auths = 3;
}

message time_point_sec{
    uint32 utc_seconds = 1;
}

message signature_type{
    bytes sig = 1;
}

message sha256{
    bytes hash = 1;
}
